app/assets/stylesheets/components/_navbar.scss
.navbar-lewagon {
  justify-content: space-between;
  background: black;
  display: flex;
  height: 6vh;
  position: sticky;
  bottom: 0;
}

.navbar-lewagon .navbar-collapse {
  flex-grow: 0;
}

.navbar-lewagon .navbar-brand img {
  width: 40px;
}

.navbar-logo {
  color: white;
}

.nav-link {
  color: white;
}

